arreglos 2 de enero

--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -44,29 +44,29 @@
     <!-- Brand Logo Carousel Start-->
     <div id="carousel" class="owl-carousel nxt">
         <div class="item text-center">
-            <img src="image/testimonio-01.jpg" alt="" class="img-responsive" />
+            <img src="assets/image/testimonio-01.jpg" alt="" class="img-responsive" />
         </div>
         <div class="item text-center">
-            <img src="image/testimonio-02.jpg" alt="" class="img-responsive" />
+            <img src="assets/image/testimonio-02.jpg" alt="" class="img-responsive" />
         </div>
         <div class="item text-center">
-            <img src="image/testimonio-03.jpg" alt="" class="img-responsive" />
+            <img src="assets/image/testimonio-03.jpg" alt="" class="img-responsive" />
         </div>
         <div class="item text-center">
-            <img src="image/testimonio-03.jpg" alt="" class="img-responsive" />
+            <img src="assets/image/testimonio-03.jpg" alt="" class="img-responsive" />
         </div>
 
         <div class="item text-center">
-            <img src="image/testimonio-04.jpg" alt="" class="img-responsive" />
+            <img src="assets/image/testimonio-04.jpg" alt="" class="img-responsive" />
         </div>
         <div class="item text-center">
-            <img src="image/testimonio-05.jpg" alt="" class="img-responsive" />
+            <img src="assets/image/testimonio-05.jpg" alt="" class="img-responsive" />
         </div>
         <div class="item text-center">
             <img src="image/testimonio-06.jpg" alt="" class="img-responsive" />
         </div>
         <div class="item text-center">
-            <img src="image/testimonio-07.jpg" alt="" class="img-responsive" />
+            <img src=assets/image/testimonio-07.jpg" alt="" class="img-responsive" />
             </div>
     </div>
 
