--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -157,20 +157,20 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
 
         <div class="col-md-8">
           <div class="row">
-            <div class="col-md-6">
-               <img class="img-responsive center-block" src="assets/image/BANNERS_at-home.jpg">
+            <div class="col-md-6 pad-upDown">
+               <img class="img-responsive center-block pad-upDown" src="assets/image/BANNERS_at-home.jpg">
             </div>
             <div class="col-md-6">
-                 <img class="img-responsive center-block" src="assets/image/BANNERS_ht-home.jpg">
+                 <img class="img-responsive center-block pad-upDown" src="assets/image/BANNERS_ht-home.jpg">
             </div>
            </div>
            <br>
            <div class="row">
             <div class="col-md-6">
-               <img class="img-responsive center-block" src="assets/image/BANNERS_mt-home.jpg">
+               <img class="img-responsive center-block pad-upDown" src="assets/image/BANNERS_mt-home.jpg">
             </div>
             <div class="col-md-6">
-                 <img class="img-responsive center-block" src="assets/image/BANNERS_oferta-runflat.jpg">
+                 <img class="img-responsive center-block pad-upDown" src="assets/image/BANNERS_oferta-runflat.jpg">
             </div>
           </div>
         </div>
