--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,9 +10,9 @@
             <h5>Contáctanos</h5>
             <table>
               <tr>
-                  <td><a href=""><i style="font-size: 28px;" class="fa fa-facebook-square" aria-hidden="true"></i></a></td>
+                  <td><a target="_blank" href="https://www.facebook.com/bremsen.santiago.1"><i style="font-size: 28px;" class="fa fa-facebook-square" aria-hidden="true"></i></a></td>
                   <td>&nbsp; &nbsp;  &nbsp;</td>
-                   <td><a href=""><i style="font-size: 28px;" class="fa fa-instagram" aria-hidden="true"></i></a></td>
+                   <td><a target="_blank" href="https://www.instagram.com/bremsen.cl/"><i style="font-size: 28px;" class="fa fa-instagram" aria-hidden="true"></i></a></td>
               </tr>
             </table>
 
