--- a/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
+++ b/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
@@ -189,10 +189,12 @@
                 </div>
                 <div class="col-md-4">
                   <div class="caption">
-                    <div class="oferta-inst" style="background: #fff;">
+                    <div *ngIf="producto.OFERTA == 'Si'"  class="oferta-inst" style="background: #fff;">
+
+                      <img src="assets/image/oferta.png" class="">
                         <!-- va a variar 2 fotos 1."oferta instantania" ó 2."Instatania rapida"
 
-                         <a href=# > <img src="#" class=""></a>
+
 
                         -->
 
