--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -54,7 +54,7 @@
             <tr>
               <td class="col-sm-3">
                   <div class="form-group" [ngClass]="{ 'has-error': cantidadValido }">
-                    <select class="form-control" name="cantidad" id="cantidad" [(ngModel)]="cantidad">
+                    <select class="form-control" name="cantidad" #cantidadSelected id="cantidad" [(ngModel)]="cantidad" (change)="cambiaCantidad(cantidadSelected.value)">
                     <option *ngFor="let stock of producto.STOCK" [value]="stock.codigo">{{stock.nombre}}</option>
                     </select>
                      <div *ngIf="cantidadValido" class="help-block">Debe seleccionar una cantidad</div>
@@ -62,7 +62,7 @@
               </td>
               <td class="col-sm-6">
 
-                <p style="text-align:right; margin-bottom: 3px;" class="precio"><b>$ {{producto.TOTAL}}</b></p>
+                <p style="text-align:right; margin-bottom: 3px;" class="precio"><b>$ {{producto.PRECIO_FINAL}}</b></p>
                 <!--p style="text-align:right; font-size: 12px;">Ahorro $60,000</p-->
               </td>
             </tr>
@@ -76,7 +76,7 @@
                 <p class="total">Total</p>
               </td>
               <td style="text-align:right;" class="col-sm-6">
-                <h3 class="precio"><b>$ {{producto.TOTAL}}</b></h3>
+                <h3 class="precio"><b>$ {{totalAComprar}}</b></h3>
 
               </td>
             </tr>
