pagina exito y fracaso

--- a/src/app/components/exito/exito.component.html
+++ b/src/app/components/exito/exito.component.html
@@ -1,3 +1,104 @@
-<p>
-  exito works!
-</p>
+
+<div class=" bg-bremsen container-fluid" > <!-- pasar el css-->
+  <div class="container">
+      <div class="pad-50">&nbsp;</div>
+          <div class="row">
+              <div class="col-md-6">&nbsp;</div> 
+                <div class="col-md-6">
+                    <h1><b>Home/ micuenta</b></h1>
+                </div>   
+          </div><!--row-->
+        <div class="pad-50">&nbsp;</div>
+   
+  </div>
+</div>
+
+<div class="container">
+    <div class="row">
+            <div class="col-md-2">
+               <div class="pad-15">&nbsp;</div>
+              <img src="assets/image/checkverde-04.png" class="img-responsive">
+            </div>
+
+          <div class="col-md-10">
+           <div class="pad-15">&nbsp;</div>
+              <h1>Felicitaciones!</h1>
+              <h3>Transacción realizada correctamente</h3>
+              <p>Registrando tus datos podrás agilizar futuras compras y obtener ofertas personalizadas. Desde tu cuenta podrás editar tu datos, ver tu historial de compras y registrar datos de facturación.</p>
+              <br>
+              <img src="assets/image/logo-webpay-plus-3.png">
+
+              <h4>Datos de la Transferencia</h4>
+              <table class="table">
+                  <tr>
+                      <td>Tarjeta:</td>
+                      <td>XXXX-6623</td>
+                  </tr>
+                  <tr>
+                      <td>N° Orden de compra:</td>
+                      <td>167</td>
+                  </tr>
+                  <tr>
+                      <td>Nombre del Comercio:</td>
+                      <td>Bremsen</td>
+                  </tr>
+                  <tr>
+                      <td>URL del comercio:</td>
+                      <td>http://bremsen.cl</td>
+                  </tr>
+                  <tr>
+                      <td>Monto:</td>
+                      <td>$ 66.550</td>
+                  </tr>
+                  <tr>
+                      <td>Moneda:</td>
+                      <td>Pesos Chilenos</td>
+                  </tr>
+                  <tr>
+                      <td>Fecha transacción:</td>
+                      <td>03/01/2018</td>
+                  </tr>
+                  <tr>
+                      <td>Nombre Comprador:</td>
+                      <td>Esteban Muñoz</td>
+                  </tr>
+                  <tr>
+                      <td>Código Autorización:</td>
+                      <td>7235</td>
+                  </tr>
+                  <tr>
+                      <td>Tipo de transacción:</td>
+                      <td>Venta</td>
+                  </tr>
+                  <tr>
+                      <td>Tipo de Cuota</td>
+                      <td>Normales</td>
+                  </tr>
+                  <tr>
+                      <td>Tipo de Pago</td>
+                      <td>Credito</td>
+                  </tr>
+                  <tr>
+                      <td>Número de cuotas</td>
+                      <td>3</td>
+                  </tr>
+                  <tr>
+                      <td><b>Descripción del Producto</b></td>
+                      <td><b>Producto</b></td>
+                  </tr>
+              </table>
+                 <br>
+                 <p>Te hemos enviado un mail de confirmación con los detalles  de tu compra</p>
+                  <br><br>
+          </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2">
+           <button class="btn btn-default">Volver al home</button>
+      </div>
+      <div class="col-md-2">
+           <button class="btn btn-primary">Descargar como pdf</button>
+      </div>
+    </div>
+</div>
+
