--- a/src/app/components/fracaso/fracaso.component.html
+++ b/src/app/components/fracaso/fracaso.component.html
@@ -1,3 +1,47 @@
-<p>
-  fracaso works!
-</p>
+
+<div class=" bg-bremsen container-fluid" > <!-- pasar el css-->
+  <div class="container">
+      <div class="pad-50">&nbsp;</div>
+          <div class="row">
+              <div class="col-md-6">&nbsp;</div> 
+                <div class="col-md-6">
+                    <h1><b>Home/ micuenta</b></h1>
+                </div>   
+          </div><!--row-->
+        <div class="pad-50">&nbsp;</div>
+   
+  </div>
+</div>
+
+<div class="container">
+    <div class="row">
+            <div class="col-md-2">
+               <div class="pad-15">&nbsp;</div>
+              <img src="assets/image/cruzroja-05.png" class="img-responsive">
+            </div>
+
+          <div class="col-md-10">
+           <div class="pad-15">&nbsp;</div>
+              <h1>Transacción Rechazada</h1>
+              <h3>Su transacción número 188 no ha podido procesada</h3>
+              <p>Las posibles causas de este rechazo son:</p>
+
+              <ul>
+                <li>Error en el ingreso de los datos de su tarjeta de crédito (fecha y/o código de seguridad).</li>
+                <li>Su tarjeta de crédito no cuenta con cupo necesario para efectuar la compra. </li>
+                <li>Tarjeta aún no habilitada en el sistema financiero.</li>
+              </ul>
+              <br>
+             
+
+                 <p>Si desea confirmar su compra porfavor contactanos a <a href="mailto:ventas@bremsen.cl" style="color: #e00034;">ventas@bremsen.cl</a></p>
+                  <br><br>
+          </div>
+    </div>
+    <div class="row">
+      <div class="col-md-2">
+           <button class="btn btn-default">Volver al home</button>
+      </div>
+      
+    </div>
+</div>
