--- a/src/app/components/exito/exito.component.html
+++ b/src/app/components/exito/exito.component.html
@@ -3,13 +3,13 @@
   <div class="container">
       <div class="pad-50">&nbsp;</div>
           <div class="row">
-              <div class="col-md-6">&nbsp;</div> 
+              <div class="col-md-6">&nbsp;</div>
                 <div class="col-md-6">
                     <h1><b>Home/ micuenta</b></h1>
-                </div>   
+                </div>
           </div><!--row-->
         <div class="pad-50">&nbsp;</div>
-   
+
   </div>
 </div>
 
@@ -94,11 +94,9 @@
     </div>
     <div class="row">
       <div class="col-md-2">
-           <button class="btn btn-default">Volver al home</button>
+           <button class="btn btn-default" routerLink="/home">Volver al home</button>
       </div>
-      <div class="col-md-2">
-           <button class="btn btn-primary">Descargar como pdf</button>
-      </div>
+
     </div>
 </div>
 
