--- a/src/app/components/fracaso/fracaso.component.html
+++ b/src/app/components/fracaso/fracaso.component.html
@@ -3,13 +3,13 @@
   <div class="container">
       <div class="pad-50">&nbsp;</div>
           <div class="row">
-              <div class="col-md-6">&nbsp;</div> 
+              <div class="col-md-6">&nbsp;</div>
                 <div class="col-md-6">
                     <h1><b>Home/ micuenta</b></h1>
-                </div>   
+                </div>
           </div><!--row-->
         <div class="pad-50">&nbsp;</div>
-   
+
   </div>
 </div>
 
@@ -32,7 +32,7 @@
                 <li>Tarjeta aún no habilitada en el sistema financiero.</li>
               </ul>
               <br>
-             
+
 
                  <p>Si desea confirmar su compra porfavor contactanos a <a href="mailto:ventas@bremsen.cl" style="color: #e00034;">ventas@bremsen.cl</a></p>
                   <br><br>
@@ -40,8 +40,8 @@
     </div>
     <div class="row">
       <div class="col-md-2">
-           <button class="btn btn-default">Volver al home</button>
+           <button class="btn btn-default" routerLink="/home">Volver al home</button>
       </div>
-      
+
     </div>
 </div>
