se corrige errores reportados

--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -36,10 +36,6 @@
 
 
 <div class="container">
-    <div class="pad-50">&nbsp;</div>
-
-
-
 
     <!-- Brand Logo Carousel Start-->
     <div id="carousel" class="owl-carousel nxt">
@@ -66,18 +62,11 @@
             <img src="image/testimonio-06.jpg" alt="" class="img-responsive" />
         </div>
         <div class="item text-center">
-            <img src=assets/image/testimonio-07.jpg" alt="" class="img-responsive" />
+            <img src="assets/image/testimonio-07.jpg" alt="" class="img-responsive" />
             </div>
     </div>
 
 </div>
-
-<div class="pad-50">&nbsp;</div>
-
-
-
-
-
 <div class="container-fluid" style=" padding: 40px 0px; background: #1e1e1e; margin-bottom:-80px;">
     <div class="container">
         <div class="row">
