--- a/src/app/components/terminos/terminos.component.html
+++ b/src/app/components/terminos/terminos.component.html
@@ -129,7 +129,7 @@ La sociedad COMPRA Y VENTA DE REPUESTOS AUTOMOTRICES SPA garantiza la confidenci
               <br>
                   <h3 style="margin-top: 0px;">¿Necesitas más información?</h3>
                  <p>Escríbenos tus preguntas  y observaciones y te contactaremos a la brevedad.</p>
-                 <button type="button" class="btn btn-primary" style="margin-bottom: 16px;">Contáctanos</button>
+                 <button type="button" class="btn btn-primary" style="margin-bottom: 16px;" routerLink="/bremsen">Contáctanos</button>
             </div>
 
 
