--- a/src/app/components/categoria-filtrada/categoria-filtrada.component.html
+++ b/src/app/components/categoria-filtrada/categoria-filtrada.component.html
@@ -192,7 +192,7 @@
               </select>
               </td>
               <td class="col-sm-6">
-                <p style="text-align:right; margin-bottom: 3px;" class="precio"><b>$ {{producto.PRECIO_FINAL}}</b></p>
+                <p style="text-align:right; margin-bottom: 3px;" class="precio"><b>{{producto.PRECIO_FINAL  | number | currencyFormat}}</b></p>
                 <!--p style="text-align:right; font-size: 12px;">Ahorro $60,000</p-->
               </td>
             </tr>
@@ -206,7 +206,7 @@
                 <p class="total">Total</p>
               </td>
               <td style="text-align:right;" class="col-sm-6">
-                <h3 class="precio"><b>$ {{producto.PRECIO_FINAL}}</b></h3>
+                <h3 class="precio"><b>{{producto.PRECIO_FINAL  | number | currencyFormat}}</b></h3>
 
               </td>
             </tr>
@@ -269,7 +269,7 @@
         <div class="modal-body">
          <h1>Producto agregado</h1>
         </div>
-       
+
       </div>
     </div>
   </div>
