--- a/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
+++ b/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
@@ -234,7 +234,7 @@
 
               </td>
               <td class="col-sm-6">
-                <p style="text-align:right; margin-bottom: 3px;" class="precio"><b>$ {{producto.PRECIO_FINAL}}</b></p>
+                <p style="text-align:right; margin-bottom: 3px;" class="precio"><b>{{producto.PRECIO_FINAL  | number | currencyFormat}}</b></p>
                 <!--p style="text-align:right; font-size: 12px;">Ahorro $60,000</p-->
               </td>
             </tr>
@@ -248,15 +248,15 @@
                 <p class="total">Total</p>
               </td>
               <td style="text-align:right;" class="col-sm-6">
-                <h3 class="precio"><b>$ {{producto.PRECIO_FINAL}}</b></h3>
+                <h3 class="precio"><b> {{producto.PRECIO_FINAL | number | currencyFormat }}</b></h3>
 
               </td>
             </tr>
             <tr style="text-align:right; ">
               <td><button type="button" class="btn btn-default bremsen " routerLink="/producto/{{producto.ID}}">Comprar</button></td>
               <td>
-               
-                
+
+
                 <button type="button" class="btn btn-primary"  (click)="agregarCarro(2,selectCantidad.value,producto.ID)"  data-toggle="modal" data-target="#myModal">
                     <i class="fa fa-plus" aria-hidden="true"></i> Carro
                 </button>
@@ -328,7 +328,7 @@
                         $('#myInput').focus()
                       })
                     </script>
- <!--                   
+ <!--
 <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
                         <div class="modal-dialog modal-sm" role="document" >
                           <div class="modal-content" style="padding-left: 8px;">
@@ -350,7 +350,7 @@
                             <div class="modal-body">
                              <h1>Producto agregado</h1>
                             </div>
-                           
+
                           </div>
                         </div>
                       </div>
