--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -62,7 +62,7 @@
               </td>
               <td class="col-sm-6">
 
-                <p style="text-align:right; margin-bottom: 3px;" class="precio"><b>$ {{producto.PRECIO_FINAL}}</b></p>
+                <p style="text-align:right; margin-bottom: 3px;" class="precio"><b>{{producto.PRECIO_FINAL  | number | currencyFormat}}</b></p>
                 <!--p style="text-align:right; font-size: 12px;">Ahorro $60,000</p-->
               </td>
             </tr>
@@ -76,7 +76,7 @@
                 <p class="total">Total</p>
               </td>
               <td style="text-align:right;" class="col-sm-6">
-                <h3 class="precio"><b>$ {{totalAComprar}}</b></h3>
+                <h3 class="precio"><b>{{totalAComprar  | number | currencyFormat}}</b></h3>
 
               </td>
             </tr>
