--- a/src/app/components/bremsen/bremsen.component.html
+++ b/src/app/components/bremsen/bremsen.component.html
@@ -118,10 +118,21 @@
             <div class="col-md-3">
                 <div class="pad-10">&nbsp;</div>
                 <div class="pad-10">&nbsp;</div>
-                <h3 style="color:#fff !important;">Dirección</h3>
-                <h3 style="color:#fff !important;">Email</h3>
-                <h3 style="color:#fff !important;">Teléfono</h3>
+                <h3 style="color:#fff !important;">Dirección:</h3>
+                 <p style="color:#fff;">Av apoquindo 6314 </p>
+                <h3 style="color:#fff !important;">Email:</h3>
+                <p><a style="color:#fff;" href="mailto:ventas@bremsen.cl"> ventas@bremsen.cl</a> </p>
+                <h3 style="color:#fff !important;">Teléfono:</h3>
+                <p><a style="color:#fff;"  href="tel:+56989568901">+56 9 8956 8901</a> </p>
 
+                <table>
+                    <tbody><tr>
+                        <td><a style="color:#fff;" href="https://www.facebook.com/bremsen.santiago.1" target="_blank"><i aria-hidden="true" class="fa fa-facebook-square" style="font-size: 28px;"></i></a></td>
+                        <td>&nbsp; &nbsp;  &nbsp;</td>
+                         <td><a style="color:#fff;" href="https://www.instagram.com/bremsen.cl/" target="_blank"><i aria-hidden="true" class="fa fa-instagram" style="font-size: 28px;"></i></a></td>
+                    </tr>
+                  </tbody>
+                </table>
 
 
             </div>
