--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -94,13 +94,13 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
   <div class="row">
     <div class="pad-50">&nbsp;</div>
     <div class="col-md-12 text-center">
-      <h1 class="title">Nuestro servicios</h1>
+      <h1 class="title">Nuestros servicios</h1>
       <br>
     </div>
     <div class="col-md-4 text-center">
       <img class="img-responsive center-block" src="assets/image/pasos-buscar-01.png">
       <h3>Busca tus neumáticos</h3>
-      <p>Encuentra tus neumáticos por modelo de auto o medida, filtrando de forma sencilla y rapida</p>
+      <p>Encuentra tus neumáticos por modelo de auto o medida, filtrando de forma sencilla y rápida</p>
     </div>
     <div class="col-md-4 text-center">
       <img class="img-responsive center-block" src="assets/image/pasos-instalacion-02.png">
@@ -158,19 +158,19 @@ Múltiples formas de instalación y el mejor servicio al estilo Bremsen.cl</p>
         <div class="col-md-8">
           <div class="row">
             <div class="col-md-6 pad-upDown">
-               <img class="img-responsive center-block pad-upDown" src="assets/image/BANNERS_at-home.jpg">
+               <img class="img-responsive center-block " src="assets/image/BANNERS_at-home.jpg">
             </div>
             <div class="col-md-6">
-                 <img class="img-responsive center-block pad-upDown" src="assets/image/BANNERS_ht-home.jpg">
+                 <img class="img-responsive center-block " src="assets/image/BANNERS_ht-home.jpg">
             </div>
            </div>
            <br>
            <div class="row">
             <div class="col-md-6">
-               <img class="img-responsive center-block pad-upDown" src="assets/image/BANNERS_mt-home.jpg">
+               <img class="img-responsive center-block " src="assets/image/BANNERS_mt-home.jpg">
             </div>
             <div class="col-md-6">
-                 <img class="img-responsive center-block pad-upDown" src="assets/image/BANNERS_oferta-runflat.jpg">
+                 <img class="img-responsive center-block " src="assets/image/BANNERS_oferta-runflat.jpg">
             </div>
           </div>
         </div>
