--- a/src/app/components/categoria-filtrada/categoria-filtrada.component.html
+++ b/src/app/components/categoria-filtrada/categoria-filtrada.component.html
@@ -154,7 +154,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="caption">
-                    <div class="oferta-inst" style="background: #fff;">
+                    <div class="oferta-inst" style="background: #fff; padding-left:0px;">
                         <!-- va a variar 2 fotos 1."oferta instantania" ó 2."Instatania rapida"
 
                          <a href=# > <img src="#" class=""></a>
