--- a/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
+++ b/src/app/components/categoria-no-filtrada/categoria-no-filtrada.component.html
@@ -191,7 +191,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="caption">
-                    <div *ngIf="producto.OFERTA == 'Si'"  class="oferta-inst" style="background: #fff;">
+                    <div *ngIf="producto.OFERTA == 'Si'"  class="oferta-inst" style="background: #fff; padding-left:0px;">
 
                       <img src="assets/image/oferta.png" class="">
                         <!-- va a variar 2 fotos 1."oferta instantania" ó 2."Instatania rapida"
