--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -219,7 +219,27 @@
 
           <!-- Search Start-->
           <div class="col-table-cell col-lg-2 col-md-2 col-sm-6 col-xs-12 inner">
+<!--
+            <nav id="menu" class="navbar custom-link-center">
+              
+                      <div class="navbar-header">  <span class="drop-icon visible-sm visible-xs"><i class="fa fa-align-justify" style="font-size: 30px;"></i></span></div>
+                    
+                      <div class="collapse navbar-collapse navbar-ex1-collapse">
+                        <ul class="nav navbar-nav">
+                          <li class="dropdown sub"> <a href="category.html">Neumático &nbsp; &nbsp;</a>
+                                
+                              </li>
+                          <li><a class="home_link" title="Home" href="#">Instalación &nbsp; &nbsp;</a></li>
+                           <li><a class="home_link" title="Home" href="#">Bremsen &nbsp; &nbsp;</a></li>
+                          <li class="dropdown"><a href="blog.html">Blog &nbsp; &nbsp;</a></li>
+              
+                        </ul>
+                      </div>
+                     
+                    </nav>
+                  -->
 
+       
       <nav id="menu" class="navbar custom-link-center">
 
         <div class="navbar-header">  <span class="drop-icon visible-sm visible-xs"><i class="fa fa-align-justify" style="font-size: 30px;"></i></span></div>
@@ -235,6 +255,10 @@
         </div>
 
       </nav>
+
+
+
+
          </div>
           <!-- Search End-->
 
